<resources>
    <string name="nome_icone">RATD</string>
    <string name="app_name">Relatório de Assistência Técnica Digital</string>
    <string name="inicio">Inicio</string>
    <string name="fim">Fim</string>
    <string name="title_activity_formulario_detail">Serviço realizado</string>
    <string name="title_activity_formulario_list">Lista de RATDs</string>
    <string name="title_activity_form1_dados">Preenchimento do relatório de assistência técnica</string>
    <string name="title_activity_camera">Tirar foto de horimetro, chassi e defeito</string>
    <string name="title_activity_mecanico_detail">Dados cadastrais do mecânico</string>
    <string name="title_activity_mecanico_form">Preenchimento do perfil do mecânico</string>
    <string name="title_activity_mecanico_list">Lista de mecânicos</string>
    <string name="chassi_required">Campo Chassi obrigatório!</string>
    <string name="cliente_required">Campo Cliente obrigatório!</string>
    <string name="modelo_required">Campo Modelo obrigatório!</string>
    <string name="horimetro_required">Campo Horimetro obrigatório!</string>
    <string name="cidade_cliente_required">Campo Cidade obrigatório!</string>
    <string name="estado_cliente_required">Campo Estado obrigatório!</string>
    <string name="local_da_obra_required">Campo Local Da Obra obrigatório!</string>
    <string name="defeito_constatado_required">Campo Defeito Constatado obrigatório!</string>
    <string name="procedimento_adotado_required">Campo Procedimento Adotado obrigatório!</string>
    <string name="km_rodados_required">Campo Km Rodados obrigatório!</string>
    <string name="hrs_trabalhadas_required">Campo Horas Trabalhadas obrigatório!</string>
    <string name="hrs_deslocamento_required">Campo Horas Deslocamento obrigatório!</string>
    <string name="hrs_extra_trabalhadas_required">Campo Horas Extras Trabalhadas obrigatório!</string>
    <string name="hrs_extra_deslocamento_required">Campo Horas Extra Deslocamento obrigatório!</string>
    <string name="codigo_peca_required">Campo Codigo Peça obrigatório!</string>
    <string name="quantidade_required">Campo Quantidade obrigatório!</string>
    <string name="descricao_required">Campo Descriçao obrigatório!</string>
    <string name="nome_required">Campo Nome obrigatório!</string>
    <string name="matricula_required">Campo Matrícula obrigatório!</string>
    <string name="cargo_funcao_required">Campo Cargo/Função obrigatório!</string>
    <string name="filial_required">Campo Filial obrigatório!</string>
    <string name="cidade_required">Campo Cidade obrigatório!</string>
    <string name="estado_required">Campo Estado obrigatório!</string>
    <string name="capacete_required">Campo Capacete obrigatório!</string>
    <string name="oculos_prot_required">Campo Óculos de proteção de obrigatório!</string>
    <string name="luva_required">Campo Luva obrigatório!</string>
    <string name="camisa_manga_required">Campo Camisa manga longa c/ faixa reflet obrigatório!</string>
    <string name="calca_required">Campo Calça c/ faixa refletiva obrigatório!</string>
    <string name="sapato_norma_required">Campo p/ Sapato uso normal obrigatório!</string>
    <string name="sapato_operador_required">Campo Sapato p/ operação obrigatório!</string>
    <string name="distancia_entre_maquina_required">Campo Distância entre máquinas obrigatório!</string>
    <string name="estacionamento_local_adequado_required">Campo Estacionamento em local adequado obrigatório!</string>
    <string name="distancia_operador_abastecimento">Campo Distância do oper. no abastecimento obrigatório!</string>
    <string name="possui_kit_contencao">Campo Possui kit de contençao obrigatório!</string>
    <string name="usar_ant_chama_required">Campo Sabe usar sist. anti chama obrigatório!</string>
    <string name="danos_canaleletas_required">Campo Danos a canaletas/estradas obrigatório!</string>
    <string name="danos_mata_required">Campo Danos a mata nativa obrigatório!</string>
    <string name="tipo_equipamento_required">Campo Tipo do equipamento obrigatório!</string>
    <string name="capacidade_reservatorio_required">Campo Capacidade reservatórios  obrigatório!</string>
    <string name="capacidade_required">Campo Capacidade reservatórios obrigatório!</string>
    <string name="tipos_lubrificante_required">Campo Tipos de lubrificantes obrigatório!</string>
    <string name="pontos_lubrificacao_required">Campo Pontos de lubrificações obrigatório!</string>
    <string name="interpret_manual_required">Campo Interpretação do manual eq. obrigatório!</string>
    <string name="desempenho_geral_qualidade_required">Campo Desempenho geral obrigatório!</string>
    <string name="check_list_required">Campo Check list diario obrigatório!</string>
    <string name="relatorio_diario_equip_required">Campo Relatório diário do equipamento obrigatório!</string>
    <string name="preenchimento_livro_ocorrencia_required">Campo Preenchimento livro de ocorrências obrigatório!</string>
    <string name="reaperto_equip_required">Campo Reaperto do equipamento obrigatório!</string>
    <string name="conhecimento_indicador_painal_required">Campo Conhecimento indicadores/painel obrigatório!</string>
    <string name="utilizacao_funcao_joystick_required">Campo Utilização correta funções/joystick obrigatório!</string>
    <string name="regulagens_calibracoes_required">Campo Regulagens e calibrações obrigatório!</string>
    <string name="comunicacao_required">Campo Comunicação obrigatório!</string>
    <string name="segue_normas_trab_required">Campo Segue normas de trabalho obrigatório!</string>
    <string name="assiduidade_required">Campo Assiduidade obrigatório!</string>
    <string name="desempenho_geral_producao_required">Campo Desempenho geral obrigatório!</string>
    <string name="posicao_pilhas_required">Campo Posição das pilhas/linhas obrigatório!</string>
    <string name="leitura_mapas_required">Campo Leitura de mapas obrigatório!</string>
    <string name="cooperacao_equipe_required">Campo Cooperação na equipe obrigatório!</string>
    <string name="movimento_suave_sincronizado_required">Campo Movimentos suaves/sincronizados obrigatório!</string>
    <string name="manobrabilidade_equipamento_required">Campo Manobrabilidade do equipamento obrigatório!</string>
    <string name="posicao_equip_required">Campo Posição do equipamento obrigatório!</string>
    <string name="sentido_exec_trab_required">Campo Sentido de execução do trab. obrigatório!</string>
    <string name="desempenho_geral_simulador_required">Campo Desempenho geral obrigatório!</string>
    <string name="proced_subir_descer_required">Campo Procedimento subir/descer da maq. obrigatório!</string>
    <string name="utilizacao_saida_emergencia_required">Campo Utilização da saída de emergência obrigatório!</string>
    <string name="utili_sis_anti_chama_required">Campo Sabe usar sist. anti chama obrigatório!</string>
    <string name="nome_empresa_aval_required">Campo Nome da emprasa obrigatório!</string>
    <string name="nome_op_aval_required">Campo Nome do operador obrigatório!</string>
    <string name="id_frota_maq_required">Campo Identificação de frota da máquina obrigatório!</string>
    <string name="nome_mecanico_aval_required">Campo Nome mecânico avaliador obrigatório!</string>
    <string name="nome_subir_descer_prancha_maq_required">Campo Subir/descer na prancha c/ a máquina obrigatório!</string>
    <string name="nome_fixar_maq_prancha_required">Campo Fixar a máquina em cima da prancha obrigatório!</string>
    <string name="calcular_nota_seguranca_required">Pressione o botão GERAR RESULTADO para poder salvar o relatório!</string>
    <string name="range_required">Range de pontuaçao deve ser entre 0 e 9!</string>
    <string name="tamanho_numero_required">Pontuação deve conter apenas um número!</string>
    <string name="tamanho_numero_trabalho_equipe_required">Pontuação deve conter apenas um número!</string>
    <string name="tamanho_numero_reaperto_verificacoes_required">Pontuação deve conter apenas um número entre 0 e 9!</string>
    <string name="title_activity_form_relatorio_operacional">Preenchimento relatório operacional</string>
    <string name="title_activity_relatorio_opreacional_detail">Resultado da avaliação operacional</string>
    <string name="title_activity_relatorio_operacional_list">Lista de relatórios operacionais</string>
    <string name="title_activity_check_list_ponsse">Menu de serviços Ponsse</string>
    <string name="title_activity_manutencao_cabecote_list">Lista de manutenções realizadas nos HARVESTERS</string>
    <string name="title_activity_manutencao_grua_list">Lista de manutenções realizadas nas GRUAS</string>
    <string name="title_activity_manutencao_forwarder_list">Lista de manutenções realizadas nos FORWARDERS</string>
    <string name="title_activity_list_garantia_forwarder_ponsse">Lista de garantias dos FORWARDERS</string>
    <string name="title_activity_list_garantia_harvester_ponsse">Lista de garantias dos HARVESTERS</string>
    <string name="title_activity_list_manutencao_propgramada_maquina_base">Lista de manutenções programadas das MÁQUINAS BASE</string>
    <string name="title_activity_form_garantia_cabecote_ponsse">Preencher formulário de garantia do HARVESTER</string>
    <string name="title_activity_manutencaoprograma_guindaste">Preencher formulário de manutenção pragramada básica/completa da GRUA</string>
    <string name="title_activity_form_manutencao_forwarder">Preencher formulário de manutenção pragramada básica/completa do FORWARDER</string>
    <string name="title_activity_manutencao_cabecote">Preencher formulário de manutenção pragramada básica/completa do HARVESTER</string>
    <string name="title_activity_form_manutencao_programada_maquina_base">Preencher formulário de manutenção pragramada básica/completa da MÁQUINA BASE</string>
    <string name="title_activity_form_garantia_forwarder">Preencher formulário de garantia do FORWARDER</string>
    <string name="title_activity_manutencao_programada_forwarder_detail">Serviço realizado</string>
    <string name="title_activity_manutencao_programada_guindaste_detail">Serviço realizado</string>
    <string name="title_activity_manutencao_detail">Serviço realizado</string>
    <string name="title_activity_detail_garantia_forwarder_ponsse">Serviço realizado</string>
    <string name="title_activity_detail_garantia_cabecote_ponsse">Serviço realizado</string>
    <string name="title_activity_manutencao_programada_maquina_base_detail">Serviço realizado</string>
    <string name="title_activity_servicos_log_max">Menu de serviços Log Max</string>
    <string name="title_activity_guia_manutencao_logmax_list">Lista de guias de manutenções</string>
    <string name="title_activity_form_guia_manutencao_logmax">Formulário de guia de manutenção</string>
    <string name="title_activity_form_controle_instalacao_certificado_garantia">Preencher formulário de controle de instalação e certificado de garantia</string>
    <string name="title_activity_guia_manutencao_logmax_detail">Serviço realizado</string>
    <string name="title_activity_detail_controle_instalacao_certificado_garantia">Serviço realizado</string>
    <string name="title_activity_numero10">Facas superiores.</string>
    <string name="title_activity_numero2">Faca de desgalhar (lado esquerdo).</string>
    <string name="title_activity_numero3">Pistão do lado esquerdo do cilindro da faca de desgalhar.</string>
    <string name="title_activity_numero4">Chapa lado esquerdo do cilindro da faca de desgalhar.</string>
    <string name="inicio_do_deslocamento">Inicio do Deslocamento</string>
    <string name="inicio_do_trabalho">Inicio do Trabalho</string>
    <string name="inicio_do_almoço">Inicio do Almoço</string>
    <string name="fim_do_almoço">Fim do Almoço</string>
    <string name="fim_do_trabalho">Fim do Trabalho</string>
    <string name="fim_do_deslocamento">Fim do Deslocamento</string>
</resources>