<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shared_preferences_deslocamento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_padrao"
    android:orientation="vertical"
    android:background="@color/amarelo_padrao"
    tools:context=".sharedPreferences.SharedPreferencesDeslocamento">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ponto Digital"
        android:id="@+id/txtTitulo"
        android:textStyle="bold"
        android:textColor="#000000"

        android:padding="5dp"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/branco"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:text="@string/inicio_do_deslocamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_ini_desl" />

            <Button
                android:text="@string/inicio_do_trabalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_ini_trab" />

            <Button
                android:text="@string/inicio_do_almoço"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_ini_alm" />

            <Button
                android:text="@string/fim_do_almoço"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_fim_alm" />

            <Button
                android:text="@string/fim_do_trabalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_fim_trab" />

            <Button
                android:text="@string/fim_do_deslocamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_fim_desl" />

        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/inicio_do_deslocamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/txt_ini_desl" />
            <TextView
                android:text="@string/inicio_do_trabalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/txt_ini_trab" />
            <TextView
                android:text="@string/inicio_do_almoço"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_margin="1dp"
                android:id="@+id/txt_ini_alm" />

            <TextView
                android:text="@string/fim_do_almoço"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/txt_fim_alm" />

            <TextView
                android:text="@string/fim_do_trabalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/txt_fim_trab" />

            <TextView
                android:text="@string/fim_do_deslocamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/branco"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/txt_fim_desl" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="LIMPAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btn_limpar" />
</LinearLayout>
